# mypainter

./: CMakeLists.txt
include/: bezier.h  interfaces.h
plugins/: CMakeLists.txt  basictoolsplugin.cpp  basictoolsplugin.h
plugins/math/: Earser.cpp  Earser.h  bezier.c  pen_pencil.cpp  pen_pencil.h
src/: CMakeLists.txt  Eraser.cpp  Eraser.h  commandInterface.h  interfaces.h  main.cpp  mainwidnow.cpp  mainwidnow.h  mainwindow.cpp  mainwindow.h  paintwidget.cpp  paintwidget.h  undocommand.cpp  undocommand.h
src/math/: Earser.cpp  Earser.h  bezier.cpp  bezier.h  pen_pencil.cpp  pen_pencil.h
